# glossa

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: db.rs  importer.rs  lib.rs  main.rs  paths.rs
src/model/: catalog.rs  entry.rs  library.rs  mod.rs
src/ui/: chrome.rs  mod.rs  palette.rs  search.rs  settings.rs
tests/: db_lookup.rs
